namespace Resources.Enums;

public enum BindFlags
{
  None,
  VertexBuffer,
  IndexBuffer,
  ConstantBuffer,
  ShaderResource,
  StreamOutput,
  RenderTarget,
  DepthStencil,
  UnorderedAccess,
  Decoder,
  VideoEncoder,
}
