namespace Resources.Enums;

public enum BufferUsage
{
  Vertex,
  Index,
  Constant,
  Structured,
  Raw,
  IndirectArgs,
  Counter,
  Append,
  Consume,
  Staging,
  Upload,
  Readback,
}