public enum CPUAccessFlags
{
  None,
  Write,
  Read,
  ReadWrite,
}