namespace Resources.Enums;

public enum IndexFormat
{
  UInt16,
  UInt32
}
