namespace Resources.Enums;
public enum ResourceMiscFlags
{
  None,
  GenerateMips,
  Shared,
  TextureCube,
  DrawIndirectArgs,
  BufferAllowRawViews,
  BufferStructured,
  ResourceClamp,
  SharedKeyedMutex,
  GDICompatible,
}
