namespace Resources.Enums;

public enum ResourceUsage
{
  Default,
  Immutable,
  Dynamic,
  Staging,
}