namespace Resources.Enums;

public enum TextureFormat
{
  Unknown,
  R32G32B32A32_TYPELESS,
  R32G32B32A32_FLOAT,
  R32G32B32A32_UINT,
  R32G32B32A32_SINT,
  R32G32B32_TYPELESS,
  R32G32B32_FLOAT,
  R32G32B32_UINT,
  R32G32B32_SINT,
  R16G16B16A16_TYPELESS,
  R16G16B16A16_FLOAT,
  R16G16B16A16_UNORM,
  R16G16B16A16_UINT,
  R16G16B16A16_SNORM,
  R16G16B16A16_SINT,
  R32G32_TYPELESS,
  R32G32_FLOAT,
  R32G32_UINT,
  R32G32_SINT,
  R10G10B10A2_TYPELESS,
  R10G10B10A2_UNORM,
  R10G10B10A2_UINT,
  R11G11B10_FLOAT,
  R8G8B8A8_TYPELESS,
  R8G8B8A8_UNORM,
  R8G8B8A8_UNORM_SRGB,
  R8G8B8A8_UINT,
  R8G8B8A8_SNORM,
  R8G8B8A8_SINT,
  R16G16_TYPELESS,
  R16G16_FLOAT,
  R16G16_UNORM,
  R16G16_UINT,
  R16G16_SNORM,
  R16G16_SINT,
  R32_TYPELESS,
  D32_FLOAT,
  R32_FLOAT,
  R32_UINT,
  R32_SINT,
  R24G8_TYPELESS,
  D24_UNORM_S8_UINT,
  R24_UNORM_X8_TYPELESS,
  X24_TYPELESS_G8_UINT,
  R8G8_TYPELESS,
  R8G8_UNORM,
  R8G8_UINT,
  R8G8_SNORM,
  R8G8_SINT,
  R16_TYPELESS,
  R16_FLOAT,
  D16_UNORM,
  R16_UNORM,
  R16_UINT,
  R16_SNORM,
  R16_SINT,
  R8_TYPELESS,
  R8_UNORM,
  R8_UINT,
  R8_SNORM,
  R8_SINT,
  A8_UNORM,
  BC1_TYPELESS,
  BC1_UNORM,
  BC1_UNORM_SRGB,
  BC2_TYPELESS,
  BC2_UNORM,
  BC2_UNORM_SRGB,
  BC3_TYPELESS,
  BC3_UNORM,
  BC3_UNORM_SRGB,
  BC4_TYPELESS,
  BC4_UNORM,
  BC4_SNORM,
  BC5_TYPELESS,
  BC5_UNORM,
  BC5_SNORM,
  BC6H_TYPELESS,
  BC6H_UF16,
  BC6H_SF16,
  BC7_TYPELESS,
  BC7_UNORM,
  BC7_UNORM_SRGB,
}
