namespace Resources.Enums;

public enum TextureUsage
{
  RenderTarget,
  DepthStencil,
  ShaderResource,
  UnorderedAccess,
  BackBuffer,
  Staging,
  ResolveTarget,
  ResolveSource,
  CubeMap,
  VolumeTexture,
}
